--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-red-contrib-template",
+  "name": "node-red-contrib-proxmox",
   "version": "0.0.1",
-  "description": "NodeRed templater",
+  "description": "NodeRed proxmoxr",
   "author": {
     "name": "naimo84",
     "email": "git@naimo84.dev"
@@ -12,11 +12,11 @@
       "email": "git@naimo84.dev"
     }
   ],
-  "homepage": "https://github.com/naimo84/node-red-contrib-template",
+  "homepage": "https://github.com/naimo84/node-red-contrib-proxmox",
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/naimo84/node-red-contrib-template/blob/master/LICENSE"
+      "url": "https://github.com/naimo84/node-red-contrib-proxmox/blob/master/LICENSE"
     }
   ],
   "keywords": [
@@ -26,13 +26,13 @@
   ],
   "node-red": {
     "nodes": {
-      "template-config": "dist/template-config.js",
-      "template-node": "dist/template-node.js"
+      "proxmox-config": "dist/proxmox-config.js",
+      "proxmox-node": "dist/proxmox-node.js"
     }
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/naimo84/node-red-contrib-template"
+    "url": "https://github.com/naimo84/node-red-contrib-proxmox"
   },
   "scripts": {
     "start": "gulp && node-red",
