--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-red-contrib-proxmox",
-  "version": "0.0.1",
-  "description": "NodeRed proxmoxr",
+  "name": "@naimo84/node-red-contrib-proxmox",
+  "version": "0.0.2",
+  "description": "NodeRed proxmox",
   "author": {
     "name": "naimo84",
     "email": "git@naimo84.dev"
@@ -27,7 +27,8 @@
   "node-red": {
     "nodes": {
       "proxmox-config": "dist/proxmox-config.js",
-      "proxmox-node": "dist/proxmox-node.js"
+      "proxmox-node": "dist/proxmox-node.js",
+      "proxmox-qemu": "dist/proxmox-qemu.js"
     }
   },
   "repository": {
@@ -39,7 +40,8 @@
     "release": "standard-version",
     "release-minor": "standard-version --release-as minor",
     "watch": "gulp --watch",
-    "build": "gulp"
+    "build": "gulp",
+    "dev": "gulp develop"
   },
   "husky": {
     "hooks": {
@@ -51,7 +53,7 @@
     "url": "https://paypal.me/NeumannBenjamin"
   },
   "dependencies": {
-    "@naimo84/proxmox": "file:../node-proxmox",
+    "@naimo84/proxmox": "^0.1.0",
     "debug": "^4.1.1"
   },
   "devDependencies": {
