feat: node and storage

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
       "proxmox-config": "dist/proxmox-config.js",
       "proxmox-node": "dist/proxmox-node.js",
       "proxmox-storage": "dist/proxmox-storage.js",
+      "proxmox-backup": "dist/proxmox-backup.js",
       "proxmox-qemu": "dist/proxmox-qemu.js"
     }
   },
